2006-02-07 Mikhail Khodjaiants
	Bug 114793: Add an extension point to contribute command factories.
	+ mi/org/eclipse/cdt/debug/mi/core/command/factories/linux (package)
	+ LinuxCLIInfoSharedLibrary.java
	+ LinuxCLIInfoSharedLibraryInfo.java
	+ StandardLinuxCommandFactory.java
	* plugin.xml

2006-02-07 Mikhail Khodjaiants
	Bug 126789: Use new "fullname" attribute of stack frame description.
	* MIStackListFrames.java
	* MIFrame.java

2006-02-06 Mikhail Khodjaiants
	Suppress "set auto-solib" - returns error on Windows.
	* StandardWinCommandFactory.java

2006-02-06 Mikhail Khodjaiants
	Use getters to access members of "MICommand".
	* MIBreakCondition.java
	* MICommand.java
	* MIDataDisassemble.java
	* MIEnvironmentCD.java
	* MIGDBSetEnvironment.java

2006-02-06 Mikhail Khodjaiants
	Bug 114793: Add an extension point to contribute command factories.
	* MANIFEST.MF
	* CommandFactory.java
	+ mi/org/eclipse/cdt/debug/mi/core/command/factories (package)
	+ CommandFactoriesMessages.java
	+ CommandFactoriesMessages.properties
	+ CommandFactoryDescriptor.java
	+ CommandFactoryManager.java
	+ StandardCommandFactory.java
	+ mi/org/eclipse/cdt/debug/mi/core/command/factories/win32 (package)
	+ CygwinCommandFactory.java
	+ CygwinMIEnvironmentCD.java
	+ CygwinMIEnvironmentDirectory.java
	+ StandardWinCommandFactory.java
	+ WinCLIInfoSharedLibrary.java
	+ WinCLIInfoSharedLibraryInfo.java
	+ WinMIEnvironmentCD.java
	* CLIInfoSharedLibraryInfo.java
	+ commandFactories.exsd
	- CygwinCommandFactory.java
	* CygwinGDBCDIDebugger.java
	* CygwinGDBCDIDebugger2.java
	* CygwinGDBDebugger.java
	- CygwinMIEnvironmentCD.java
	- CygwinMIEnvironmentDirectory.java
	* GDBCDIDebugger2.java
	* IMILaunchConfigurationConstants.java
	* MIPlugin.java
	* plugin.xml
	* plugin.properties

2006-01-31 Mikhail Khodjaiants
	Bug 124966: GDBTypeParser.parse(String) parses incorrectly.
	Applied patch from Matthias Spycher (matthias@coware.com).
	* GDBTypeParser.java

2006-01-27 Mikhail Khodjaiants