@@ -16,6 +16,7 @@ CygwinGDBDebugger.name=Cygwin gdb Debugger
 GDBServer.name=gdbserver Debugger
 GDBMIDebugger.name=gdb/mi
 
+StandardCommandFactory.name=Standard
 StandardLinuxCommandFactory.name=Standard
 StandardWindowsCommandFactory.name=Standard
 CygWinCommandFactory.name=CygWin
